# puresend

./: .eslintrc-auto-import.json  .gitignore  .prettierignore  CHANGELOG.md  CHANGELOG_EN.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_EN.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  README.md  README_EN.md  auto-imports.d.ts  components.d.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  deploy-docs.yml
docs/: getting-started.md  index.md
docs/.vitepress/: config.ts
docs/development/: setup.md
docs/en/: getting-started.md  index.md
docs/features/: cloud-storage.md  file-transfer.md  history.md  security.md  settings.md  web-download.md  web-upload.md
scripts/: generate-icon.js
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: cloud.rs  error.rs  lib.rs  main.rs  network.rs
src-tauri/src/cloud_providers/: aliyun_drive.rs  aliyun_oss.rs  mod.rs
src-tauri/src/commands/: discovery.rs  mod.rs  transfer.rs
src-tauri/src/discovery/: commands.rs  manager.rs  mdns.rs  mod.rs
src-tauri/src/http_common/: mod.rs
src-tauri/src/models/: file.rs  mod.rs  peer.rs  task.rs
src-tauri/src/share/: commands.rs  mod.rs  models.rs  server.rs
src-tauri/src/transfer/: chunker.rs  cloud.rs  commands.rs  compression.rs  crypto.rs  http_crypto.rs  integrity.rs  local.rs  mod.rs  resume.rs  transport.rs
src-tauri/src/web_upload/: commands.rs  mod.rs  models.rs  server.rs
src/composables/: index.ts  useFontSize.ts  usePlatform.ts  (+1 more)
(+82 files in other folders)
