## Here's my code: 
[package]
name = "puresend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "puresend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
sha2 = "0.10"
thiserror = "2"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
local-ip-address = "0.6"
bytes = "1"
futures = "0.3"
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = { version = "0.7", features = ["io"] }
hex = "0.4"
qrcode = "0.14"
urlencoding = "2.1"
async-trait = "0.1.89"
hostname = "0.4.2"
tauri-plugin-os = "2"
open = "5"

[dev-dependencies]
tempfile = "3.26"

# 发布优化配置
[profile.release]
codegen-units = 1    # 允许 LLVM 执行更好的优化
lto = true           # 启用链接时优化
opt-level = "s"      # 优先考虑小的二进制文件大小
panic = "abort"      # 通过禁用 panic 处理程序来提高性能并减小体积
strip = true         # 确保移除调试符号
